--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -18,6 +18,16 @@
         text-align: center;
         margin-top: 50px;
     }
+    #footer{
+
+        position:relative;
+        height: 2em;
+        width: 100%;
+        bottom: 0;
+        padding:0;
+        margin:0;
+
+    }
 
     form {
         border: 3px solid lightcyan;
@@ -81,6 +91,17 @@
         float: right;
     }
 
+
+    #contactbtn{
+
+        margin:0;
+        font-size: 4px;
+        width:9em;
+        height: 3em;
+        padding:1px auto;
+        float: right;
+    }
+
 </style>
 <body>
 <div id="upperlevel">
@@ -112,7 +133,14 @@
             <a href="/CreateDescriptionPage">Create a new disease</a>
         </div>
     </form>
+
 </div>
+<div id = "footer" >
+    <button id = "contactbtn" >
+        Contact Us
+    </button>
+</div>
+
 
 </body>
 
