--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -36,7 +36,7 @@
     }
 
     input[type=text], input[type=password] {
-        width: 50%;
+        width: 30%;
         padding: 12px 20px;
         margin: 8px 0;
         display: inline-block;
@@ -102,6 +102,50 @@
         float: right;
     }
 
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto; /* 15% from the top and centered */
+        padding: 20px;
+        border: 1px solid #888;
+        width: 40%; /* Could be more or less, depending on screen size */
+    }
+
+    .close {
+        background-color: lightcyan;
+        padding:1px;
+        margin:0;
+        width: 2.5%;
+        color: black;
+        float: right;
+        font-size: 18px;
+        font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+        background-color: red
+    ;
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
+    }
+
+
 </style>
 <body>
 <div id="upperlevel">
@@ -137,8 +181,30 @@
 </div>
 <div id = "footer" >
     <button id = "contactbtn" >
-        Contact Us
+        Feedback
     </button>
+</div>
+
+<div id = "myModal" class = "modal" >
+    <div class = "modal-content" >
+        <button type="button" class="close" aria-label="Close" id = "closebtn"><span aria-hidden="true">&times;</span></button>
+        <div class="form-group">
+            <label for = "fullname">Fullname:</label>
+            <input type = "text" class = "form-control" id = "fullname">
+        </div>
+
+        <div class = "form-group">
+            <label for ="email" style="white-space: pre;">  Email:   </label>
+            <input type = "text" class = "form-control" id = "email">
+        </div>
+
+        <div class="form-group">
+            <label for="feedback">Your feedback:</label>
+            <textarea class="form-control" rows="5" cols="10" id="feedback"></textarea>
+        </div>
+
+
+    </div>
 </div>
 
 
@@ -146,6 +212,21 @@
 
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
+
+    var modal = document.getElementById('myModal');
+    var btn = document.getElementById('contactbtn');
+
+    var span = document.getElementsByClassName("close")[0];
+
+    btn.onclick = function(){
+        modal.style.display="block";
+    }
+
+    span.onclick = function() {
+        modal.style.display = "none";
+    }
+
+
 function getCookie(c_name)
 {
     if (document.cookie.length>0)
