--- a/src/main/resources/static/modePage.html
+++ b/src/main/resources/static/modePage.html
@@ -183,12 +183,12 @@
     <div class = "modal-content" >
         <button type="button" class="close" aria-label="Close" id = "closebtn"><span aria-hidden="true">&times;</span></button>
         <div class="form-group">
-            <label for = "fullname">Fullname:</label>
+            <label for = "fullname">username:</label>
             <input type = "text" class = "form-control" id = "fullname">
         </div>
 
         <div class = "form-group">
-            <label for ="email" style="white-space: pre;">Email:   </label>
+            <label for ="email" style="white-space: pre;">Subject:   </label>
             <input type = "text" class = "form-control" id = "email">
         </div>
 
@@ -278,7 +278,34 @@ $(document).ready(function(){
 });
 
 function submitFeedback() {
-    
+    var obj = {};
+    var username = document.getElementById('fullname').value;
+    var subject = document.getElementById('email').value;
+    var content = document.getElementById('feedback').value;
+    obj.username = username;
+    obj.subject = subject;
+    obj.content = content;
+    console.log(obj);
+    $(function(callback) {
+        $.ajax({
+            url: '/sendFeedback',
+            type: 'POST',
+            dataType: 'json',
+            data : JSON.stringify(obj),
+            contentType: "application/json; charset=utf-8",
+            success: function (data) {
+                callback(data);
+                console.log("success");
+            },
+            error: function (error) {
+                console.log(error);
+            },
+        }).done(function(result) {
+            console.log(result);
+            alert("Thank you for your feedback!");
+            window.location.replace('/ModePage');
+        });
+    });
 }
 
 </script>
