--- a/src/main/resources/static/articlePost.html
+++ b/src/main/resources/static/articlePost.html
@@ -116,9 +116,15 @@
 </script>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script>
+var username = getCookie('username');
+var status = getCookie('status');
+if (status < 1) {
+    alert("Sorry, you don't have access to this page. You will be redirected to the mode page.");
+    window.location.replace('/ModePage');
+}
 function add(){
-        window.location.replace('/ModePage');
-    }
+    window.location.replace('/ModePage');
+}
 function setCookie(c_name,value,expiredays)
 {
     var exdate=new Date()
