btn deshape fixed

--- a/src/main/resources/static/searchPage.html
+++ b/src/main/resources/static/searchPage.html
@@ -162,6 +162,18 @@
         to {opacity: 1}
     }
 
+    ul button {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    }
+
+    ul button:hover {
+    text-overflow: inherit;
+    overflow: display;
+    }
+
+
 </style>
 
 <body>
