--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -279,6 +279,7 @@
                 <option>Endocrinology</option>
                 <option>Dentistry</option>
                 <option>Pulmonology</option>
+                <option></option>
             </select>
         </div>
 
