--- a/src/main/resources/static/createTextPage.html
+++ b/src/main/resources/static/createTextPage.html
@@ -279,6 +279,7 @@
                 <option>Endocrinology</option>
                 <option>Dentistry</option>
                 <option>Pulmonology</option>
+                <option>Infectiology</option>
             </select>
         </div>
 
@@ -321,6 +322,7 @@
                 <option>Endocrinology</option>
                 <option>Dentistry</option>
                 <option>Pulmonology</option>
+                <option>Infectiology</option>
             </select>
             <br>
             <button class="addbtn" type="button" class="addbtn" style="width: 20%; font-size: 12px;" onclick="confirmNew()">
